# siec

./: .coveragerc  .gitignore  LICENSE  Pipfile  README.md  build.sh  package.toml  pyproject.toml
.github/workflows/: ci.yml
editors/helix/: languages.toml
sie/: package.toml
sie/src/: dependency.sie  main.sie  package.sie
siec/: __init__.py  __main__.py  ast.py  backend.py  cli.py  loader.py  lsp.py
siec/codegen/: __init__.py  abi.py  aliases.py  asm.py  calls.py  coercion.py  conditionals.py  constants.py  debug.py  enums.py  errors.py  expressions.py  functions.py  generator.py  generics.py  globals.py  inference.py  interfaces.py  macros.py  methods.py  overloads.py  sizes.py  statements.py  structs.py  types.py
siec/lexer/: __init__.py  cursor.py  rules.py  token.py
siec/parser/: __init__.py  constants.py  enums.py  expressions.py  functions.py  includes.py  statements.py  stream.py  structs.py  types.py
tests/: conftest.py
tests/backend/: conftest.py  test_address_of.py  test_aliases.py  test_anonymous_types.py  test_any.py  test_arithmetic.py  test_arrays.py  test_arrow.py  test_asm.py  test_backend.py  test_bitwise.py  test_block_expr.py  test_blocks.py  test_break_continue.py  test_case.py  test_casts.py  test_chars.py  test_compound.py  test_cond_compilation.py  test_conditionals.py  test_const_types.py  test_constants.py  test_debug_info.py  test_default_args.py  test_defer.py  test_deref.py  test_enumerate.py  test_enums.py  test_errors.py  test_extend.py  test_field_defaults.py  test_floats.py  test_foreach.py  test_function_refs.py  (+36 more)
(+64 files in other folders)
